[package]
name = "{{project-name}}"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
{{project-name-snake-case}}_app = { path = "../app" }

[build-dependencies]
gear-wasm-builder.workspace = true
sails-idl-gen.workspace = true
{{project-name-snake-case}}_app = { path = "../app" }
